test/Errors/already_defined.elab
Axiom dup : Prop
Axiom dup : Prop